# simpleloggerpanic

./: Cargo.toml  README.md  rustfmt.toml
src/: main.rs  webapp.rs
